# icepop_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
notebook/: README.md  TM_analysis_compare_mc.ipynb  asd__mouse_colon.ipynb  asd__mouse_colon__cell_type.ipynb  asd__mouse_colon__min_purity-0.2__min_mc_size-20.ipynb  asd__mouse_ileum__cell_type.ipynb  barplot_with_legend.ipynb  causal_sim.ipynb  causal_sim__min_purity-0.2.ipynb  causal_sim__min_purity-0.2__min_ct-100__min_mc_size-20__synthetic.ipynb  causal_sim__min_purity-0.2__min_ct-30__min_mc_size-20__beta_ns_ss.ipynb  causal_sim_compare_mc.ipynb  causal_sim_compare_mc_heterogeneity.ipynb  causal_sim_heterogeneity.ipynb  disease_disease_sim.ipynb  example_plots.ipynb  null_sim.ipynb  null_sim_ct.ipynb  null_sim_ct__min_purity-0.2.ipynb  null_sim_ct__min_purity-0.2__min_mc_size-20.ipynb  null_sim_icepop_mc_size.ipynb  null_sim_run.ipynb  preprocess_TM_FACS.ipynb  process_TM_FACS.ipynb  process_mouse_colon_scdata.ipynb  process_mouse_ileum_scdata.ipynb
run/: TM_mc.sb  h5ad2rds.sb  mouse_colon_mc.sb  mouse_ileum_mc.sb  run_icepop.sb  run_icepop__mc-30.sb  run_icepop__mc-50.sb  run_icepop__mc-75.sb  run_icepop_asd.sb  run_icepop_causal_sim__mc-30.sb  run_icepop_causal_sim__mc-50.sb  run_icepop_causal_sim__mc-75.sb  run_icepop_null_sim__mc-30.sb  run_icepop_null_sim__mc-50.sb  run_icepop_null_sim__mc-75.sb  run_scDRS.sb  run_scDRS_asd.sb  run_scDRS_casual_sim.sb  run_scDRS_casual_sim_ds.sb  run_scDRS_null_sim.sb  run_scDRS_null_sim_ds.sb  run_seismic.sb  run_seismic_asd.sb  run_seismic_causal_sim.sb  simulation.sh  (+1 more)
(+69 files in other folders)
