[tool.poetry]
name = "icepop-analysis"
version = "0.1.0"
description = ""
authors = ["yhadevol <yh_adevol@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
icepop = {path = "/mnt/research/FishEvoDevoGeno/Hao/icepop_public", develop = true}
leidenalg = "^0.11.0"
mygene = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
