[tool.poetry]
name = "icepop-analysis"
version = "0.1.0"
description = ""
authors = ["yhadevol <yh_adevol@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
leidenalg = "^0.11.0"
mygene = "^3.2.2"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp311-cp311-linux_x86_64.whl#sha256=83bfe1134dfa8ab86553c15da5dffa190a86d822afafe8ea6de1169c10d971aa" }
icepop = { git = "https://github.com/krishnanlab/icepop_public.git", rev = "main" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
